# minimalecm

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
debian/: README.Debian  changelog  control  copyright
include/: test.hpp
src/: CMakeLists.txt  test.cpp
